--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "pregnancy-learning-platform",
   "version": "1.0.0",
   "description": "Interactive learning platform for pregnancy and childbirth concepts",
+  "homepage": "https://mathewmoslow.github.io/PregnancyandBirth/",
   "keywords": ["react", "education", "obstetrics", "pregnancy"],
   "main": "src/index.js",
   "dependencies": {
@@ -11,11 +12,14 @@
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
-    "typescript": "4.1.3"
+    "typescript": "4.1.3",
+    "gh-pages": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
